--- a/css/style.css
+++ b/css/style.css
@@ -1,59 +1,69 @@
 *{
     padding: 0%;
     margin: 0%;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 body{
-    background-color: rgb(139, 139, 139);
-    display: flex;
-    flex-direction: column;
+    background-color: rgb(117, 103, 145);
+}
+
+main{
+    min-height: 90vh;
 }
 
 header{
-    background-color: purple;
+    background-color: rgb(34, 30, 102);
     height: 100px;
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
+    color: white;
 }
-
-
-
 
 
 .teamDescription{
-    background-color: aqua;
+    background-color: rgb(112, 90, 124);
     margin-left: 50px;
     padding: 15px;
+    text-align: justify;
 }
 
 .profilePic{
+
     width: 50%;
-    max-height: 50%;
     object-fit: cover;
     border-radius: 100%;
     border: 1px solid black;
     box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.85);
-    margin-bottom: 20px;
+    margin: 20px;
 }
 
 .teamMembers{
     display: flex;
     justify-content: space-around;
     text-align: center;
-    margin: 20px;
+    margin: 20px;    
 }
 
 .member{
-    background-color: pink;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    background-color: rgb(52, 48, 110);
+    width: 25%;
+    height: 70vh;
+    border-radius: 20px;
+    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.85);
+    border: solid black 3px
 }
 
 
 .memberDescription{
-    width: 50%;
-    text-align: center;
-    margin-top: 10px;
+    text-align: justify;
+    margin: 50px;
+    color: white;
 }
 
 .logo{
@@ -62,12 +72,10 @@ header{
 }
 
 footer{
-    
     left: 0;
     bottom: 0;
     width: 100%;
     background-color: blueviolet; 
-
 }
 
 .socialMedia{
