--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 }
 
 body{
-    background-color: rgb(117, 103, 145);
+    background-color: #353535;
 }
 
 main{
@@ -13,7 +13,7 @@ main{
 }
 
 header{
-    background-color: rgb(34, 30, 102);
+    background-color: #284B63;
     height: 100px;
     display: flex;
     justify-content: center;
@@ -24,10 +24,13 @@ header{
 
 
 .teamDescription{
-    background-color: rgb(112, 90, 124);
-    margin-left: 50px;
+    background-color: #3C6E71;
+    margin: 50px;
     padding: 15px;
     text-align: justify;
+    border-radius: 20px;
+    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.85);
+    border: solid black 3px;
 }
 
 .profilePic{
@@ -51,12 +54,12 @@ header{
     display: flex;
     align-items: center;
     flex-direction: column;
-    background-color: rgb(52, 48, 110);
+    background-color: #3C6E71;
     width: 25%;
     height: 70vh;
     border-radius: 20px;
     box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.85);
-    border: solid black 3px
+    border: solid black 3px;
 }
 
 
@@ -64,6 +67,8 @@ header{
     text-align: justify;
     margin: 50px;
     color: white;
+    display: flex;
+    font-size: 1.3 vw;
 }
 
 .logo{
@@ -75,12 +80,13 @@ footer{
     left: 0;
     bottom: 0;
     width: 100%;
-    background-color: blueviolet; 
+    background-color: #284B63; 
 }
 
 .socialMedia{
     display: flex;
     justify-content: space-around;
+    flex-direction: row-reverse;
 }
 
 .link{
@@ -88,4 +94,14 @@ footer{
     align-items: center;
 
 
+}
+
+@media(max-width:1000px) {
+    .member{
+        width: 70%;
+    }
+}
+
+.logoAA{
+    width: 40px;
 }
