--- a/css/style.css
+++ b/css/style.css
@@ -1,36 +1,60 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 *{
     padding: 0%;
     margin: 0%;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Montserrat";
+    line-height: 1.5rem;
 }
 
-body{
-    background-color: #353535;
-}
+html {
+    --s: 50px;
+    --c: #1B263B;
+    --_s: calc(2*var(--s)) calc(2*var(--s));
+    --_g: 35.36% 35.36% at;
+    --_c: #0000 66%,#0D1B2A 68% 70%,#0000 72%;
+    background: 
+      radial-gradient(var(--_g) 100% 25%,var(--_c)) var(--s) var(--s)/var(--_s), 
+      radial-gradient(var(--_g) 0 75%,var(--_c)) var(--s) var(--s)/var(--_s), 
+      radial-gradient(var(--_g) 100% 25%,var(--_c)) 0 0/var(--_s), 
+      radial-gradient(var(--_g) 0 75%,var(--_c)) 0 0/var(--_s), 
+      repeating-conic-gradient(var(--c) 0 25%,#0000 0 50%) 0 0/var(--_s), 
+      radial-gradient(var(--_c)) 0 calc(var(--s)/2)/var(--s) var(--s) var(--c);
+    background-attachment: fixed;
+  }
+
+/* body{
+    background-color: #1B263B;
+} */
 
 main{
     min-height: 90vh;
 }
 
 header{
-    background-color: #284B63;
+    background-color: #0D1B2A;
     height: 100px;
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
-    color: white;
+    color: #E0E1DD;
+    margin-bottom: 50px;
+    box-shadow: 1px 10px 10px rgba(0, 0, 0, 0.85);
+}
+h2{
+    margin-bottom: 15px;
 }
 
-
 .teamDescription{
-    background-color: #3C6E71;
+    background-color: #0D1B2A;
     margin: 50px;
-    padding: 15px;
+    padding: 20px;
     text-align: justify;
     border-radius: 20px;
     box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.85);
-    border: solid black 3px;
+    border: solid #778DA9 3px;
+    color: #E0E1DD;
+    width: 50%;
 }
 
 .profilePic{
@@ -38,7 +62,7 @@ header{
     width: 50%;
     object-fit: cover;
     border-radius: 100%;
-    border: 1px solid black;
+    border: 7px solid #778DA9;
     box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.85);
     margin: 20px;
 }
@@ -54,21 +78,22 @@ header{
     display: flex;
     align-items: center;
     flex-direction: column;
-    background-color: #3C6E71;
-    width: 25%;
-    height: 70vh;
+    background-color: #0D1B2A;
+    min-width: 300px;
+    max-width: 400px;
+    height: 700px;
     border-radius: 20px;
     box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.85);
-    border: solid black 3px;
+    border: solid #778DA9 2px;
+    color: #E0E1DD;
 }
 
 
 .memberDescription{
     text-align: justify;
     margin: 50px;
-    color: white;
     display: flex;
-    font-size: 1.3 vw;
+    font-size: 1rem;
 }
 
 .logo{
@@ -80,7 +105,7 @@ footer{
     left: 0;
     bottom: 0;
     width: 100%;
-    background-color: #284B63; 
+    background-color: #0D1B2A; 
 }
 
 .socialMedia{
@@ -96,12 +121,23 @@ footer{
 
 }
 
-@media(max-width:1000px) {
+/* @media(max-width:1000px) {
     .member{
         width: 70%;
     }
-}
+} */
 
 .logoAA{
     width: 40px;
+    margin-right: 20px;
+}
+
+.row2{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+a{
+    color: #E0E1DD;
+    text-decoration: none;
 }
